tests/snapshots/sdk_serialization_snapshots__codex__ir_from_codex_input.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: ir
---
messages:
  - role: system
    content:
      - type: text
        text: You code.
  - role: user
    content:
      - type: text
        text: Write hello world
