tests/snapshots/sdk_serialization_snapshots__codex__receipt_to_response.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: resp
---
{
  "id": "[id]",
  "model": "codex-mini",
  "output": [
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Hello from the assistant."
        }
      ]
    }
  ],
  "usage": {
    "input_tokens": 100,
    "output_tokens": 50,
    "total_tokens": 150
  },
  "status": "completed"
}
