tests/snapshots/sdk_serialization_snapshots__codex__request_minimal.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "codex-mini",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": "Hello"
    }
  ]
}
