tests/snapshots/sdk_serialization_snapshots__codex__response_success.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: resp
---
{
  "id": "resp_001",
  "model": "codex-mini",
  "output": [
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Here is your function."
        }
      ]
    }
  ],
  "usage": {
    "input_tokens": 50,
    "output_tokens": 30,
    "total_tokens": 80
  },
  "status": "completed"
}
