tests/snapshots/sdk_serialization_snapshots__codex__stream_error.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: event
---
{
  "type": "error",
  "message": "Rate limit exceeded",
  "code": "rate_limit"
}
