tests/snapshots/sdk_serialization_snapshots__codex__work_order_from_request.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "Write tests",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "codex-mini",
    "vendor": {
      "max_output_tokens": 2048,
      "temperature": 0.1
    },
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
